Use variables for font-sizes

--- a/app/assets/stylesheets/_content.scss
+++ b/app/assets/stylesheets/_content.scss
@@ -18,7 +18,7 @@
 
   h2 {
     border-bottom: $light-border;
-    font-size: em(18);
+    font-size: $large-font-size;
     font-weight: 600;
     line-height: 1;
     margin-bottom: 1em;
