--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -14,6 +14,11 @@ $h4-font-size: $base-font-size * 1.5;
 $h5-font-size: $base-font-size * 1.25;
 $h6-font-size: $base-font-size;
 
+$large-font-size: em(18);
+$medium-font-size: em(14);
+$small-font-size: em(12);
+$xsmall-font-size: em(10);
+
 // Line height
 $base-line-height: 1.5;
 $header-line-height: 1.25;
@@ -31,7 +36,6 @@ $dark-gray: #2e4153;
 $darker-blue: #293f54;
 $green: #4ab471;
 $hot-pink: #e91e63;
-$lavendar: #717ecd;
 $light-blue: #4EB1CB;
 $light-gray: #edeff0;
 $light-green: #E6EFC2;
@@ -41,7 +45,7 @@ $lighter-gray: #f0f1f2;
 $medium-gray: #647687;
 $orange: #ff5722;
 $pink: #d96383;
-$purple: #9c27b0;
+$purple: #717ecd;
 $red: #cf5C60;
 $teal: #009688;
 $yellow: #f3ae4e;
