--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,7 @@
 @import "helpers";
 @import "layout";
 @import "page-header";
+@import "sessions";
 @import "slice";
 @import "table-list";
 @import "tags";
