WIP: Add PullRequest#slug

--- a/app/views/pull_requests/_pull_request.html.erb
+++ b/app/views/pull_requests/_pull_request.html.erb
@@ -30,4 +30,8 @@
       <span class="dummy">1</span>
     </div>
   </div>
+
+  <div>
+    <%= link_to "Show more detail", pull_request_path(id: pull_request.slug) %>
+  </div>
 </li>
