WIP: Green spec test to get to a show page

--- a/app/views/pull_requests/_pull_request.html.erb
+++ b/app/views/pull_requests/_pull_request.html.erb
@@ -32,6 +32,6 @@
   </div>
 
   <div>
-    <%= link_to "Show more detail", pull_request_path(id: pull_request.slug) %>
+    <%= link_to "Show more detail", pull_request %>
   </div>
 </li>
