WIP: Refactor show detail feature spec

--- a/app/views/pull_requests/show.html.erb
+++ b/app/views/pull_requests/show.html.erb
@@ -10,7 +10,7 @@
   </div>
 </header>
 
-<main>
+<main data-role="pull-request-detail">
   <div class="table-list-cell">
     <img
        src="<%= @pull_request.avatar_url %>"
