Display real comment count for each PR
To get this count, we actually have to sum up the number of comments on the PR
itself plus whatever was inlined.

--- a/app/views/pull_requests/_pull_request.html.erb
+++ b/app/views/pull_requests/_pull_request.html.erb
@@ -27,7 +27,7 @@
   <div class="table-list-cell hide-mobile">
     <div class="comment-count">
       <%= embedded_svg "svg/comment.svg" %>
-      <span class="dummy">1</span>
+      <span data-role="comment-count"><%= pull_request.comment_count %></span>
     </div>
   </div>
 </li>
