--- a/app/views/pages/setup.html.erb
+++ b/app/views/pages/setup.html.erb
@@ -19,8 +19,8 @@
   <div class="content">
     <section>
       <h2>What is Beggar?</h2>
-      <p>Beggar is a tool to help with getting pull request reviews. Once you have set up Beggar on your repo, any new pull request will automatically be added to Beggar. It will also automatically be posted to the correct Slack room based on the tags you've provided.</p>
-      <p>To make sure your PR goes to the correct place, your PR description should include tags like #rails #javascript #design. Beggar will parse and send to all the appropriate rooms!</p>
+      <p>Beggar is a tool to help with getting pull request reviews. Once you have set up Beggar on your repo, any new pull request will automatically be added to Beggar. It will also automatically be posted to the correct Slack channel based on the tags you've provided.</p>
+      <p>To make sure your PR goes to the correct place, your PR description should include tags like #rails #javascript #design. Beggar will parse and send to all the appropriate channels!</p>
       <p>Tags you can use currently:</p>
       <ul>
         <% all_tag_names.each do |tag| %>
