--- a/app/assets/stylesheets/base/_tables.scss
+++ b/app/assets/stylesheets/base/_tables.scss
@@ -6,14 +6,14 @@ table {
 }
 
 th {
-  border-bottom: 1px solid darken($base-border-color, 15);
+  border-bottom: $base-border;
   font-weight: bold;
   padding: ($base-spacing / 2) 0;
   text-align: left;
 }
 
 td {
-  border-bottom: $base-border;
+  border-bottom: $light-border;
   padding: ($base-spacing / 2) 0;
 }
 
