--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -49,6 +49,8 @@ $purple: #717ecd;
 $red: #cf5C60;
 $teal: #009688;
 $yellow: #f3ae4e;
+$white: #fff;
+$transparent-white: rgba($white, 0.5);
 
 // Background Colors
 $base-background-color: white;
