--- a/app/views/pages/setup.html.erb
+++ b/app/views/pages/setup.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <div class="container">
     <h1 class="page-header-logo">
-      <%= link_to "Beggar", root_url %>
+      <%= link_to "PesteR", root_url %>
     </h1>
     <%= link_to root_url, class: "page-header-nav-link" do %>
       Back to Home &rarr;
@@ -18,10 +18,10 @@
 <div class="container">
   <div class="content">
     <section>
-      <h2>What is Beggar?</h2>
-      <p>Beggar is a tool to help get your pull requests reviewed. Once
+      <h2>What is PesteR?</h2>
+      <p>PesteR is a tool to help get your pull requests reviewed. Once
       configured, pull requests with a matching <code>#tag</code> will be added
-      to the Beggar UI and the appropriate Slack channel.</p>
+      to the PesteR UI and the appropriate Slack channel.</p>
       <p>New PRs have a "Needs Review" status. Once there are one or more
       comments, it will be moved to to "In Progress".</p>
       <p>Any comment containing <code>LGTM</code> will consider the PR
@@ -57,7 +57,7 @@
         <li>Select <code>Send me everything</code>, and submit.</li>
         <li>
           <p>Submit a PR! When given a matching <code>#tag</code> in the
-          description, it will be posted to both the Beggar UI and its
+          description, it will be posted to both the PesteR UI and its
           associated Slack channel.</p>
         </li>
       </ol>
@@ -67,7 +67,7 @@
       <h2>Contributing</h2>
       <ul>
         <li>
-          Check out the repo on <a href="https://github.com/thoughtbot/beggar">GitHub</a>.
+          Check out the repo on <a href="https://github.com/thoughtbot/pester">GitHub</a>.
         </li>
       </ul>
     </section>
