Remove capital R in Pester name

--- a/app/views/pull_requests/index.html.erb
+++ b/app/views/pull_requests/index.html.erb
@@ -1,7 +1,7 @@
 <header class="page-header">
   <div class="container">
     <h1 class="page-header-logo">
-      <%= link_to "PesteR", root_url %>
+      <%= link_to "Pester", root_url %>
     </h1>
     <nav class="page-header-nav">
       <ul>
