--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -50,7 +50,7 @@ p {
 }
 
 a {
-  @include transition(color 0.1s linear);
+  transition: color 0.1s linear;
   color: $base-link-color;
   text-decoration: none;
 
