--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
-$sans-serif: "proxima-nova-soft", $helvetica;
-$serif: $georgia;
+$sans-serif: "proxima-nova-soft", $font-stack-helvetica;
+$serif: $font-stack-georgia;
 $base-font-family: $sans-serif;
 $header-font-family: $base-font-family;
 $decorative-font-family: "ff-prater-script-web", $base-font-family;
